--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
               'morph': 'morph 8s ease-in-out infinite',
               'aurora': 'aurora 20s linear infinite',
               'scroll': 'scroll 1.5s infinite',
+              'marquee': 'marquee 30s linear infinite',
             },
             keyframes: {
               blob: {
@@ -64,6 +65,10 @@
               scroll: {
                 '0%': { transform: 'translateY(0)', opacity: 1 },
                 '100%': { transform: 'translateY(10px)', opacity: 0 }
+              },
+              marquee: {
+                '0%': { transform: 'translateX(0%)' },
+                '100%': { transform: 'translateX(-50%)' },
               }
             }
           }
@@ -146,6 +151,11 @@
       /* Scrollbar hiding */
       .scrollbar-hide::-webkit-scrollbar { display: none; }
       .scrollbar-hide { -ms-overflow-style: none; scrollbar-width: none; }
+      
+      /* Pause marquee on hover */
+      .hover\:pause:hover {
+        animation-play-state: paused;
+      }
     </style>
   <script type="importmap">
 {
